--- a/src/App.css
+++ b/src/App.css
@@ -205,19 +205,18 @@
 /* Animação para o botão "aceso" pulsando */
 @keyframes pulseGlow {
   0%, 100% {
-    box-shadow: 0 0 0px #AFCB21, 0 0 6px #AFCB21;
+    box-shadow: 0 0 0px #9521cb, 0 0 0px #AFCB21;
     transform: scale(1);
   }
   50% {
-    box-shadow: 0 0 5px #AFCB21, 0 0 10px #AFCB21;
+    box-shadow: 0 0 0px #AFCB21, 0 0 0px #AFCB21;
     transform: scale(1.02);
   }
 }
 
 /* Classe que aplica a animação */
 .glow-button {
-  animation: pulseGlow 2.5s infinite ease-in-out;
-  
+  animation: pulseGlow 2s infinite ease-in-out;
 }
 
 .animate-fade-in {
